--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -56,7 +56,7 @@
   height: 16px;
   margin-right: 10px;
 }
-.copyright {
+.footer__copyright {
   margin-left: 80px;
   margin-top: 108px;
   padding-bottom: 60px;
