--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -6,6 +6,9 @@
   flex-direction: column;
   align-items: center;
 }
+.reservation__fieldset {
+  width: 425px;
+}
 
 .reservation__title {
   text-align: center;
