--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -6,8 +6,9 @@
   flex-direction: column;
   align-items: center;
 }
-.reservation__fieldset {
-  width: 425px;
+.reservation__form {
+  display: flex;
+  flex-direction: column;
 }
 
 .reservation__title {
