--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -10,6 +10,10 @@
   display: flex;
   flex-direction: column;
 }
+.reservation__form {
+  display: flex;
+  flex-direction: column;
+}
 
 .reservation__title {
   text-align: center;
